--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,14 @@ body{
     width: 100%;
     height: 100px;
     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
 }
 
 .login{
+    display: none;
     position: relative;
     top: 20px;
     left: 70%;
@@ -73,9 +77,6 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    position: absolute;
-    top:25px;
-    left: 500px;
 }
 
 li {
@@ -368,3 +369,6 @@ button:focus{
     display: block;
 }
 
+#listLinks{
+    
+}
