--- a/style/main.css
+++ b/style/main.css
@@ -38,4 +38,9 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: calc(90vh - 192px);
+}
+
+main table td {
+    padding: 8px;
 }
